--- a/app/build.gradle
+++ b/app/build.gradle
@@ -88,6 +88,8 @@ dependencies {
 
     implementation 'com.romandanylyk:pageindicatorview:1.0.3'
 
+    implementation 'com.jjoe64:graphview:4.2.2'
+
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
