--- a/app/build.gradle
+++ b/app/build.gradle
@@ -82,8 +82,9 @@ dependencies {
 
 
     //navigation component
-    implementation 'android.arch.navigation:navigation-fragment-ktx:1.0.0'
-    implementation 'android.arch.navigation:navigation-ui-ktx:1.0.0'
+    def navigation_version = '2.3.5'
+    implementation "androidx.navigation:navigation-fragment-ktx:$navigation_version"
+    implementation "androidx.navigation:navigation-ui-ktx:$navigation_version"
 
     implementation 'com.github.kirich1409:viewbindingpropertydelegate:1.4.6'
 
