--- a/app/build.gradle
+++ b/app/build.gradle
@@ -80,6 +80,8 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.12.0'
     kapt 'com.github.bumptech.glide:compiler:4.12.0'
 
+    //editText formatting
+    implementation "ru.tinkoff.decoro:decoro:1.4.0"
 
     //navigation component
     def navigation_version = '2.3.5'
