--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,7 +27,7 @@
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyBLR3iEOULZSNtuNNhhGLIpTASvwxvVLg4" />
+            android:value="@string/google_api_key" />
 
         <activity android:name=".ui.main.MainActivity">
             <intent-filter>
